[package]
name = "fasdinit"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "A simple, fast, and portable FreeBSD rc.d-style init system for Linux."

[[bin]]
name = "fasdinit"
path = "src/main.rs"

[[bin]]
name = "fasdctl"
path = "src/ctl.rs"

[dependencies]
libc = "0.2"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
lto = true
panic = "abort"
strip = true
